--- a/index.html
+++ b/index.html
@@ -4,15 +4,52 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Best GF/DF Brownies!</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="The best brownies you've ever had- and you won't believe there's no gluten or dairy!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
+    <div class="two">
+      <img src="images/best-gfdf-brownies-stack.jpg" alt="Stack of 3 brownies">
+    </div>
+    <div class="one">
+    <h1>I Can't Believe There's No Gluten (or Dairy) Brownies!</h1>
+      <p>When I gave up gluten and dairy, I thought my baking days were behind me. I wasn't thrilled by the prospect, but I knew that I was committed to my new dietary restrictions. So I resigned myself to a bakeless existence. That is, until I came across the blog post on texanerin.com (another magnificent Erin) that changed my life. A recipe for the ooey-gooiest, fudgy-wudgiest brownies you’ve ever had. And you'd never believe that they’re dairy AND gluten free too! Did I mention that they're totally easy to make too? Seriously, this recipe is a must have in any kitchen, whether you have restrictions or not. Now get ready for some serious decadence and enjoy!</p>
+    </div>
+    <section>
+      <article>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>1 cup Bob’s Red Mill Gluten Free 1-to-1 Baking Flour</li>
+          <li>3/4 cups Dutch-processed cocoa powder</li>
+          <li>1/4 tsp kosher salt</li>
+          <li>3/4 cups + 2 Tbsp coconut oil, melted and slightly cooled</li>
+          <li>1 1/2 cups granulated sugar</li>
+          <li>1 Tbsp vanilla extract</li>
+          <li>3 large eggs</li>
+          <li>3/4 cups semi-sweet dairy-free chocolate chips</li>
+          <li>1/4 cup more semi-sweet dairy-free chocolate chips</li>
+        </ul>
+      </article>
+      <article>
+        <h2>Instructions</h2>
+        <ol>
+          <li>Preheat the oven to 350° F (175° C) and line an 8”x8” pan with parchemnt paper.</li>
+          <li>In a medium mixing bowl, stir together the flour, cocoa powder, and salt. Set aside.</li>
+          <li>In a large mixing bowl, stir together the coconut oil, sugar, and vanilla extract.</li>
+          <li>Add the eggs one at a time and stir until combined.</li>
+          <li>Add the dry ingredients to the sugar mix and stir until almost no streaks of flour remain. Do not overmix!</li>
+          <li>Fold in 3/4 cups of chocolate chips.</li>
+          <li>Pour the batter into the prepared pan and sprinkle the remaining 1/4 cup chocolate chips on top.</li>
+          <li>Bake for 20-25 minutes or until the brownies have formed a thin crust and appear set in the middle.</li>
+          <li>Let cool completely, then cover and store at room temperature for up to 4 days. You can also refigerate them to give them a fudgier texture.</li>
+        </ol>
+      </article>
+    </section>
 	</body>
 
 </html>
