--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <p>Working Time: 15 min &emsp;&emsp;&emsp; Baking Time: 20-25 min &emsp;&emsp;&emsp; Yield: 9</p>
     </div>
     <section>
+      <!-- The Recipe -->
       <article>
         <h2>Ingredients</h2>
         <ul>
