--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <p>When I gave up gluten and dairy, I thought my baking days were behind me. I wasn't thrilled by the prospect, but I knew that I was committed to my new dietary restrictions. So I resigned myself to a bakeless existence. That is, until I came across the blog post on <a href="https://texanerin.com/the-best-gluten-free-brownies/" title="TexanErin" target="_blank">texanerin.com</a> (another magnificent Erin) that changed my life. A recipe for the ooey-gooiest, fudgy-wudgiest brownies you’ve ever had. And you'd never believe that they’re dairy AND gluten free too! Did I mention that they're totally easy to make too? Seriously, this recipe is a must have in any kitchen, whether you have restrictions or not. Now get ready for some serious decadence and enjoy!</p>
       <p>Working Time: 15 min &emsp;&emsp;&emsp; Baking Time: 20-25 min &emsp;&emsp;&emsp; Yield: 9</p>
     </div>
-    <section>
-      <!-- <h2>The Recipe</h2> -->
+    <div class="three">
       <article>
         <h2>Ingredients</h2>
         <ul>
@@ -51,7 +50,7 @@
           <li>Let cool completely, then cover and store at room temperature for up to 4 days. You can also refigerate them to give them a fudgier texture.</li>
         </ol>
       </article>
-    </section>
+    </div>
 	</body>
 
 </html>
